Наполовину рабочий хедер

--- a/index.html
+++ b/index.html
@@ -16,32 +16,31 @@
 <body>
     <!-- Верхняя линия -->
 
-    <header>
+    <header class="header-container">
 
-        <nav>
+        <a href="/" lang="en" class="logo">
+            <span class="web-logotext">Web</span><span class="studio-logotext">Studio</span>
+        </a>
 
-            <a href="/" lang="en"> <span class="web-logotext">Web</span><span class="studio-logotext">Studio</span>
-            </a>
+        <nav class="header-navigation">
+            <div class="header-navigation-cont">
+                <ul class="site-nav">
+                    <li class="item">
+                        <a href="/" class="current"> <span>Студия</span> </a>
+                    </li>
+                    <li class="item">
+                        <a href="./portfolio.html"> <span>Портфолио</span> </a>
+                    </li>
+                    <li class="item">
+                        <a href="/"> <span>Контакты</span> </a>
+                    </li>
+                </ul>
 
-            <ul class="site-nav">
-                <li>
-                    <a href="/" class="current"> <span>Студия</span> </a>
-                </li>
-                <li>
-                    <a href="./portfolio.html"> <span>Портфолио</span> </a>
-                </li>
-                <li>
-                    <a href="/"> <span>Контакты</span> </a>
-                </li>
-                <li>
-                    <a href="/"> <span>About</span> </a>
-                </li>
-            </ul>
-
-            <ul class="mail-tel-nav">
-                <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                <li> <a href="tel:+380991111111">+38 096 111 11 11</a> </li>
-            </ul>
+                <ul class="mail-tel-nav">
+                    <li class="item"> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
+                    <li class="item"> <a href="tel:+380991111111">+38 096 111 11 11</a> </li>
+                </ul>
+            </div>
         </nav>
 
     </header>
