--- a/index.html
+++ b/index.html
@@ -15,33 +15,34 @@
 
 <body>
     <!-- Верхняя линия -->
+    <header class="page-header ">
 
-    <header class="header-container">
+        <div class="container flexbox">
 
-        <a href="/" lang="en" class="logo">
-            <span class="web-logotext">Web</span><span class="studio-logotext">Studio</span>
-        </a>
+            <a href="/" lang="en" class="link logo">
+                <span class="web-logotext">Web</span><span class="studio-logotext">Studio</span>
+            </a>
 
-        <nav class="header-navigation">
-            <div class="header-navigation-cont">
-                <ul class="site-nav">
+            <nav class="header-nav">
+                <ul class="list site-nav flexbox">
                     <li class="item">
-                        <a href="/" class="current"> <span>Студия</span> </a>
+                        <a href="/" class="link current"> <span>Студия</span> </a>
                     </li>
                     <li class="item">
-                        <a href="./portfolio.html"> <span>Портфолио</span> </a>
+                        <a href="./portfolio.html" class="link"> <span>Портфолио</span> </a>
                     </li>
                     <li class="item">
-                        <a href="/"> <span>Контакты</span> </a>
+                        <a href="/" class="link"> <span>Контакты</span> </a>
                     </li>
                 </ul>
+            </nav>
 
-                <ul class="mail-tel-nav">
-                    <li class="item"> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-                    <li class="item"> <a href="tel:+380991111111">+38 096 111 11 11</a> </li>
-                </ul>
-            </div>
-        </nav>
+            <ul class="list mail-tel-nav flexbox">
+                <li class="item"> <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a> </li>
+                <li class="item"> <a href="tel:+380991111111" class="link">+38 096 111 11 11</a> </li>
+            </ul>
+
+        </div>
 
     </header>
 
@@ -49,59 +50,66 @@
         <!-- Шапка сайта -->
 
         <section class="title">
-            <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ<br />ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-            <button type="button" class="button"> <span>Заказать услугу</span> </button>
+            <div class="container">
+                <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+                <button type="button" class="button"> <span>Заказать услугу</span> </button>
+            </div>
         </section>
 
         <!-- Контейнер объединяющий "Особенности" и "Чем мы занимаемся" -->
         <div class="features-whatdo-common">
             <!-- ОСОБЕННОСТИ -->
             <section>
-                <ul>
-                    <li>
-                        <!-- ОСОБЕННОСТИ Feature 1 -->
-                        <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                        <p>
-                            Идейные соображения, а также<br />начало повседневной работы по<br /> формированию позиции.
-                        </p>
-                    </li>
+                <div class="container">
+                    <ul class="list">
+                        <li>
+                            <!-- ОСОБЕННОСТИ Feature 1 -->
+                            <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                            <p>
+                                Идейные соображения, а также<br />начало повседневной работы по<br /> формированию
+                                позиции.
+                            </p>
+                        </li>
 
-                    <li>
-                        <!-- ОСОБЕННОСТИ Feature 2 -->
-                        <h3>ПУНКТУАЛЬНОСТЬ</h3>
-                        <p>
-                            Задача организации, в особенности<br />же рамки и место обучения кадров<br />влечет за
-                            собой.
-                        </p>
-                    </li>
+                        <li>
+                            <!-- ОСОБЕННОСТИ Feature 2 -->
+                            <h3>ПУНКТУАЛЬНОСТЬ</h3>
+                            <p>
+                                Задача организации, в особенности<br />же рамки и место обучения кадров<br />влечет за
+                                собой.
+                            </p>
+                        </li>
 
-                    <li>
-                        <!-- ОСОБЕННОСТИ Feature 3 -->
-                        <h3>ПЛАНИРОВАНИЕ</h3>
-                        <p>
-                            Равным образом консультация с<br />широким активом в значительной<br />степени
-                            обуславливает.
-                        </p>
-                    </li>
+                        <li>
+                            <!-- ОСОБЕННОСТИ Feature 3 -->
+                            <h3>ПЛАНИРОВАНИЕ</h3>
+                            <p>
+                                Равным образом консультация с<br />широким активом в значительной<br />степени
+                                обуславливает.
+                            </p>
+                        </li>
 
-                    <li>
-                        <!-- ОСОБЕННОСТИ Feature 4 -->
-                        <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                        <p>
-                            Значимость этих проблем настолько<br />очевидна, что реализация плановых<br />заданий.
-                        </p>
-                    </li>
-                </ul>
+                        <li>
+                            <!-- ОСОБЕННОСТИ Feature 4 -->
+                            <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                            <p>
+                                Значимость этих проблем настолько<br />очевидна, что реализация плановых<br />заданий.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
             </section>
 
             <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
             <section>
-                <h2>Чем мы занимаемся</h2>
-                <ul>
-                    <li><img src="./images/box-1.jpg" alt="box-1"></li>
-                    <li><img src="./images/box-2.jpg" alt="box-2"></li>
-                    <li><img src="./images/box-3.jpg" alt="box-3"></li>
-                </ul>
+                <div class="container">
+                    <h2>Чем мы занимаемся</h2>
+                    <ul class="list">
+                        <li><img src="./images/box-1.jpg" alt="box-1"></li>
+                        <li><img src="./images/box-2.jpg" alt="box-2"></li>
+                        <li><img src="./images/box-3.jpg" alt="box-3"></li>
+                    </ul>
+                </div>
             </section>
 
         </div>
@@ -109,50 +117,55 @@
         <!-- НАША КОМАНДА -->
 
         <section class="team-container">
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
-                    <img src="./images/team-card-1-ID.jpg" alt="Игорь Демьяненко" width="400">
-                    <h3> Игорь Демьяненко </h3>
-                    <p lang="en">Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/team-card-2-OR.jpg" alt="Ольга Репина" width="400">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/team-card-3-NT.jpg" alt="Николай Тарасов" width="400">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
-                </li>
-                <li>
+            <div class="container">
+                <h2>Наша команда</h2>
+                <ul class="list">
+                    <li>
+                        <img src="./images/team-card-1-ID.jpg" alt="Игорь Демьяненко" width="400">
+                        <h3> Игорь Демьяненко </h3>
+                        <p lang="en">Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="./images/team-card-2-OR.jpg" alt="Ольга Репина" width="400">
+                        <h3>Ольга Репина</h3>
+                        <p lang="en">Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img src="./images/team-card-3-NT.jpg" alt="Николай Тарасов" width="400">
+                        <h3>Николай Тарасов</h3>
+                        <p lang="en">Marketing</p>
+                    </li>
+                    <li>
 
-                    <img src="./images/team-card-4-ME.jpg" alt="Михаил Ермаков" width="400">
+                        <img src="./images/team-card-4-ME.jpg" alt="Михаил Ермаков" width="400">
 
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
-                </li>
-            </ul>
+                        <h3>Михаил Ермаков</h3>
+                        <p lang="en">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
     </main>
 
     <!-- Подвал -->
     <footer class="footer">
-        <ul>
-            <li>
-                <a href="/" lang="en"> <span class="web-logotext">Web</span><span class="studio-logotext">Studio</span>
-                </a>
-            </li>
-            <li>
-                <address>
-                    <span>г. Киев, пр-т Леси Украинки, 26</span>
-                </address>
-            </li>
-            <li> <a href="mailto:info@example.com">info@example.com</a> </li>
-            <li> <a href="tel:+380991111111" class="tel-in-footer">+38 099 111 11 11</a> </li>
-        </ul>
+        <div class="container">
+            <ul class="list">
+                <li class="item">
+                    <a href="/" lang="en" class="link logo"> <span class="web-logotext">Web</span><span
+                            class="studio-logotext">Studio</span>
+                    </a>
+                </li>
+                <li class="item">
+                    <address>
+                        <span>г. Киев, пр-т Леси Украинки, 26</span>
+                    </address>
+                </li>
+                <li class="item"> <a href="mailto:info@example.com" class="link">info@example.com</a> </li>
+                <li class="item"> <a href="tel:+380991111111" class="link tel-in-footer">+38 099 111 11 11</a> </li>
+            </ul>
+        </div>
     </footer>
 </body>
 
