--- a/index.html
+++ b/index.html
@@ -48,71 +48,70 @@
 
     <main>
         <!-- Шапка сайта -->
-
-        <section class="title">
+        <section class="hero">
             <div class="container">
-                <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+                <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
                 <button type="button" class="button"> <span>Заказать услугу</span> </button>
             </div>
         </section>
 
         <!-- Контейнер объединяющий "Особенности" и "Чем мы занимаемся" -->
-        <div class="features-whatdo-common">
-            <!-- ОСОБЕННОСТИ -->
-            <section>
-                <div class="container">
-                    <ul class="list">
-                        <li>
-                            <!-- ОСОБЕННОСТИ Feature 1 -->
-                            <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                            <p>
-                                Идейные соображения, а также<br />начало повседневной работы по<br /> формированию
-                                позиции.
-                            </p>
-                        </li>
+        <!-- <div class="features-whatdo-common"> -->
+        <!-- ОСОБЕННОСТИ -->
+        <section class="featuress">
+            <div class="container features">
+                <ul class="list features flexbox">
+                    <li class="item">
+                        <!-- ОСОБЕННОСТИ Feature 1 -->
+                        <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                        <p class="text">
+                            Идейные соображения, а также начало повседневной работы по формированию
+                            позиции.
+                        </p>
+                    </li>
 
-                        <li>
-                            <!-- ОСОБЕННОСТИ Feature 2 -->
-                            <h3>ПУНКТУАЛЬНОСТЬ</h3>
-                            <p>
-                                Задача организации, в особенности<br />же рамки и место обучения кадров<br />влечет за
-                                собой.
-                            </p>
-                        </li>
+                    <li class="item">
+                        <!-- ОСОБЕННОСТИ Feature 2 -->
+                        <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
+                        <p class="text">
+                            Задача организации, в особенности же рамки и место обучения кадров влечет за
+                            собой.
+                        </p>
+                    </li>
 
-                        <li>
-                            <!-- ОСОБЕННОСТИ Feature 3 -->
-                            <h3>ПЛАНИРОВАНИЕ</h3>
-                            <p>
-                                Равным образом консультация с<br />широким активом в значительной<br />степени
-                                обуславливает.
-                            </p>
-                        </li>
+                    <li class="item">
+                        <!-- ОСОБЕННОСТИ Feature 3 -->
+                        <h3 class="title">ПЛАНИРОВАНИЕ</h3>
+                        <p class="text">
+                            Равным образом консультация с широким активом в значительной степени
+                            обуславливает.
+                        </p>
+                    </li>
 
-                        <li>
-                            <!-- ОСОБЕННОСТИ Feature 4 -->
-                            <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                            <p>
-                                Значимость этих проблем настолько<br />очевидна, что реализация плановых<br />заданий.
-                            </p>
-                        </li>
-                    </ul>
-                </div>
-            </section>
+                    <li class="item">
+                        <!-- ОСОБЕННОСТИ Feature 4 -->
+                        <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                        <p class="text">
+                            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+
 
             <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
-            <section>
-                <div class="container">
-                    <h2>Чем мы занимаемся</h2>
-                    <ul class="list">
-                        <li><img src="./images/box-1.jpg" alt="box-1"></li>
-                        <li><img src="./images/box-2.jpg" alt="box-2"></li>
-                        <li><img src="./images/box-3.jpg" alt="box-3"></li>
-                    </ul>
-                </div>
-            </section>
 
-        </div>
+            <div class="container">
+                <h2>Чем мы занимаемся</h2>
+                <ul class="list">
+                    <li><img src="./images/box-1.jpg" alt="box-1"></li>
+                    <li><img src="./images/box-2.jpg" alt="box-2"></li>
+                    <li><img src="./images/box-3.jpg" alt="box-3"></li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- </div> -->
 
         <!-- НАША КОМАНДА -->
 
