--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
                     </li>
                 </ul>
             </div>
+        </section>
 
-
-            <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
-
-            <div class="container">
-                <h2>Чем мы занимаемся</h2>
+        <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
+        <section>
+            <div class="container whatdo">
+                <h2 class="text"> Чем мы занимаемся</h2>
                 <ul class="list">
                     <li><img src="./images/box-1.jpg" alt="box-1"></li>
                     <li><img src="./images/box-2.jpg" alt="box-2"></li>
