common-features-whatwedo DONE

--- a/index.html
+++ b/index.html
@@ -56,62 +56,62 @@
         </section>
 
         <!-- Контейнер объединяющий "Особенности" и "Чем мы занимаемся" -->
-        <!-- <div class="features-whatdo-common"> -->
-        <!-- ОСОБЕННОСТИ -->
-        <section class="featuress">
-            <div class="container features">
-                <ul class="list features flexbox">
-                    <li class="item">
-                        <!-- ОСОБЕННОСТИ Feature 1 -->
-                        <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                        <p class="text">
-                            Идейные соображения, а также начало повседневной работы по формированию
-                            позиции.
-                        </p>
-                    </li>
+        <div class="common-features-whatwedo">
+            <!-- ОСОБЕННОСТИ -->
+            <section class="featuress">
+                <div class="container features">
+                    <ul class="list features flexbox">
+                        <li class="item">
+                            <!-- ОСОБЕННОСТИ Feature 1 -->
+                            <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                            <p class="text">
+                                Идейные соображения, а также начало повседневной работы по формированию
+                                позиции.
+                            </p>
+                        </li>
 
-                    <li class="item">
-                        <!-- ОСОБЕННОСТИ Feature 2 -->
-                        <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
-                        <p class="text">
-                            Задача организации, в особенности же рамки и место обучения кадров влечет за
-                            собой.
-                        </p>
-                    </li>
+                        <li class="item">
+                            <!-- ОСОБЕННОСТИ Feature 2 -->
+                            <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
+                            <p class="text">
+                                Задача организации, в особенности же рамки и место обучения кадров влечет за
+                                собой.
+                            </p>
+                        </li>
 
-                    <li class="item">
-                        <!-- ОСОБЕННОСТИ Feature 3 -->
-                        <h3 class="title">ПЛАНИРОВАНИЕ</h3>
-                        <p class="text">
-                            Равным образом консультация с широким активом в значительной степени
-                            обуславливает.
-                        </p>
-                    </li>
+                        <li class="item">
+                            <!-- ОСОБЕННОСТИ Feature 3 -->
+                            <h3 class="title">ПЛАНИРОВАНИЕ</h3>
+                            <p class="text">
+                                Равным образом консультация с широким активом в значительной степени
+                                обуславливает.
+                            </p>
+                        </li>
 
-                    <li class="item">
-                        <!-- ОСОБЕННОСТИ Feature 4 -->
-                        <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                        <p class="text">
-                            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                        </p>
-                    </li>
-                </ul>
-            </div>
-        </section>
+                        <li class="item">
+                            <!-- ОСОБЕННОСТИ Feature 4 -->
+                            <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                            <p class="text">
+                                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
 
-        <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
-        <section>
-            <div class="container whatdo">
-                <h2 class="text"> Чем мы занимаемся</h2>
-                <ul class="list">
-                    <li><img src="./images/box-1.jpg" alt="box-1"></li>
-                    <li><img src="./images/box-2.jpg" alt="box-2"></li>
-                    <li><img src="./images/box-3.jpg" alt="box-3"></li>
-                </ul>
-            </div>
-        </section>
+            <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
+            <section class="whatwedo-page">
+                <div class="container whatwedo">
+                    <h2 class="title"> Чем мы занимаемся</h2>
+                    <ul class="list flexbox">
+                        <li class="item"><img src="./images/box-1.jpg" alt="box-1"></li>
+                        <li class="item"><img src="./images/box-2.jpg" alt="box-2"></li>
+                        <li class="item"><img src="./images/box-3.jpg" alt="box-3"></li>
+                    </ul>
+                </div>
+            </section>
 
-        <!-- </div> -->
+        </div>
 
         <!-- НАША КОМАНДА -->
 
