--- a/index.html
+++ b/index.html
@@ -115,31 +115,31 @@
 
         <!-- НАША КОМАНДА -->
 
-        <section class="team-container">
-            <div class="container">
-                <h2>Наша команда</h2>
-                <ul class="list">
-                    <li>
-                        <img src="./images/team-card-1-ID.jpg" alt="Игорь Демьяненко" width="400">
-                        <h3> Игорь Демьяненко </h3>
-                        <p lang="en">Product Designer</p>
+        <section class="our-team">
+            <div class="container team">
+                <h2 class="title">Наша команда</h2>
+                <ul class="list team flexbox">
+                    <li class="item">
+                        <img src="./images/team-card-1-ID.jpg" alt="Игорь Демьяненко" width="270">
+                        <h3 class="title"> Игорь Демьяненко </h3>
+                        <p lang="en" class="text">Product Designer</p>
                     </li>
-                    <li>
-                        <img src="./images/team-card-2-OR.jpg" alt="Ольга Репина" width="400">
-                        <h3>Ольга Репина</h3>
-                        <p lang="en">Frontend Developer</p>
+                    <li class="item">
+                        <img src="./images/team-card-2-OR.jpg" alt="Ольга Репина" width="270">
+                        <h3 class="title">Ольга Репина</h3>
+                        <p lang="en" class="text">Frontend Developer</p>
                     </li>
-                    <li>
-                        <img src="./images/team-card-3-NT.jpg" alt="Николай Тарасов" width="400">
-                        <h3>Николай Тарасов</h3>
-                        <p lang="en">Marketing</p>
+                    <li class="item">
+                        <img src="./images/team-card-3-NT.jpg" alt="Николай Тарасов" width="270">
+                        <h3 class="title">Николай Тарасов</h3>
+                        <p lang="en" class="text">Marketing</p>
                     </li>
-                    <li>
+                    <li class="item">
 
-                        <img src="./images/team-card-4-ME.jpg" alt="Михаил Ермаков" width="400">
+                        <img src="./images/team-card-4-ME.jpg" alt="Михаил Ермаков" width="270">
 
-                        <h3>Михаил Ермаков</h3>
-                        <p lang="en">UI Designer</p>
+                        <h3 class="title">Михаил Ермаков</h3>
+                        <p lang="en" class="text">UI Designer</p>
                     </li>
                 </ul>
             </div>
@@ -148,8 +148,8 @@
     </main>
 
     <!-- Подвал -->
-    <footer class="footer">
-        <div class="container">
+    <footer class="page-footer">
+        <div class="container footer">
             <ul class="list">
                 <li class="item">
                     <a href="/" lang="en" class="link logo"> <span class="web-logotext">Web</span><span
