Более общая геометрия для Лого (из 2 частей)

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     </a>
                 </li>
                 <li class="item">
-                    <address>
+                    <address class="address">
                         <span>г. Киев, пр-т Леси Украинки, 26</span>
                     </address>
                 </li>
