сделана геометрия для index.html

--- a/index.html
+++ b/index.html
@@ -157,12 +157,13 @@
                     </a>
                 </li>
                 <li class="item">
-                    <address class="address">
-                        <span>г. Киев, пр-т Леси Украинки, 26</span>
+                    <address>
+                        <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
                     </address>
                 </li>
-                <li class="item"> <a href="mailto:info@example.com" class="link">info@example.com</a> </li>
-                <li class="item"> <a href="tel:+380991111111" class="link tel-in-footer">+38 099 111 11 11</a> </li>
+                <li class="item"> <a href="mailto:info@example.com" class="link mailtel-in-footer">info@example.com</a>
+                </li>
+                <li class="item"> <a href="tel:+380991111111" class="link mailtel-in-footer">+38 099 111 11 11</a> </li>
             </ul>
         </div>
     </footer>
