--- a/portfolio.html
+++ b/portfolio.html
@@ -27,10 +27,10 @@
             <nav class="header-nav">
                 <ul class="list site-nav flexbox">
                     <li class="item">
-                        <a href="./index.html" class="link"> <span>Студия</span> </a>
+                        <a href="/" class="link current"> <span>Студия</span> </a>
                     </li>
                     <li class="item">
-                        <a href="./portfolio.html" class="link current"> <span>Портфолио</span> </a>
+                        <a href="./portfolio.html" class="link"> <span>Портфолио</span> </a>
                     </li>
                     <li class="item">
                         <a href="/" class="link"> <span>Контакты</span> </a>
@@ -46,6 +46,7 @@
         </div>
 
     </header>
+
     <main>
 
         <section>
@@ -109,21 +110,24 @@
     </main>
 
     <!-- Подвал -->
-    <footer class="footer">
-        <ul class="list">
-            <li class="item">
-                <a href="/" lang="en" class="link logo"> <span class="web-logotext">Web</span><span
-                        class="studio-logotext">Studio</span>
-                </a>
-            </li>
-            <li class="item">
-                <address>
-                    <span>г. Киев, пр-т Леси Украинки, 26</span>
-                </address>
-            </li>
-            <li class="item"> <a href="mailto:info@example.com" class="link">info@example.com</a> </li>
-            <li class="item"> <a href="tel:+380991111111" class="link tel-in-footer">+38 099 111 11 11</a> </li>
-        </ul>
+    <footer class="page-footer">
+        <div class="container footer">
+            <ul class="list">
+                <li class="item">
+                    <a href="/" lang="en" class="link logo"> <span class="web-logotext">Web</span><span
+                            class="studio-logotext">Studio</span>
+                    </a>
+                </li>
+                <li class="item">
+                    <address>
+                        <span class="address">г. Киев, пр-т Леси Украинки, 26</span>
+                    </address>
+                </li>
+                <li class="item"> <a href="mailto:info@example.com" class="link mailtel-in-footer">info@example.com</a>
+                </li>
+                <li class="item"> <a href="tel:+380991111111" class="link mailtel-in-footer">+38 099 111 11 11</a> </li>
+            </ul>
+        </div>
     </footer>
 </body>
 
