Геометрия всех элементов. ДЗ№3-сделано.

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,10 +27,10 @@
             <nav class="header-nav">
                 <ul class="list site-nav flexbox">
                     <li class="item">
-                        <a href="/" class="link current"> <span>Студия</span> </a>
+                        <a href="./index.html" class="link"> <span>Студия</span> </a>
                     </li>
                     <li class="item">
-                        <a href="./portfolio.html" class="link"> <span>Портфолио</span> </a>
+                        <a href="./portfolio.html" class="link current"> <span>Портфолио</span> </a>
                     </li>
                     <li class="item">
                         <a href="/" class="link"> <span>Контакты</span> </a>
@@ -49,63 +49,71 @@
 
     <main>
 
-        <section>
-            <ul>
-                <li> <button type="button" class="portfolio-button"> <span>Все</span> </button> </li>
-                <li> <button type="button" class="portfolio-button"> <span>Веб-сайты</span> </button> </li>
-                <li> <button type="button" class="portfolio-button"> <span>Приложения</span> </button> </li>
-                <li> <button type="button" class="portfolio-button"> <span>Дизайн</span> </button> </li>
-                <li> <button type="button" class="portfolio-button"> <span>Маркетинг</span> </button> </li>
-            </ul>
+        <section class="page-portfolio">
+            <div class="container">
 
-            <ul class="projects">
-                <li>
-                    <img src="./images/project-1.jpg" alt="">
-                    <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
-                </li>
-                <li>
-                    <img src="./images/project-2.jpg" alt="">
-                    <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
-                </li>
-                <li>
-                    <img src="./images/project-3.jpg" alt="">
-                    <h3>Ресторан Seafood</h3>
-                    <p>Приложение</p>
-                </li>
-                <li>
-                    <img src="./images/project-4.jpg" alt="">
-                    <h3>Проект Prime</h3>
-                    <p>Маркетинг</p>
-                </li>
-                <li>
-                    <img src="./images/project-5.jpg" alt="">
-                    <h3>Проект Boxes</h3>
-                    <p>Приложение</p>
-                </li>
-                <li>
-                    <img src="./images/project-6.jpg" alt="">
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
-                </li>
-                <li>
-                    <img src="./images/project-7.jpg" alt="">
-                    <h3>Издание Limited Edition</h3>
-                    <p>Дизайн</p>
-                </li>
-                <li>
-                    <img src="./images/project-8.jpg" alt="">
-                    <h3>Проект LAB</h3>
-                    <p>Маркетинг</p>
-                </li>
-                <li>
-                    <img src="./images/project-9.jpg" alt="">
-                    <h3>Growing Business</h3>
-                    <p>Приложение</p>
-                </li>
+                <ul class="list button flexbox">
+                    <li class="item"> <button type="button" class="portfolio-button"> <span>Все</span> </button>
+                    </li>
+                    <li class="item"> <button type="button" class="portfolio-button"> <span>Веб-сайты</span> </button>
+                    </li>
+                    <li class="item"> <button type="button" class="portfolio-button"> <span>Приложения</span> </button>
+                    </li>
+                    <li class="item"> <button type="button" class="portfolio-button"> <span>Дизайн</span> </button>
+                    </li>
+                    <li class="item"> <button type="button" class="portfolio-button"> <span>Маркетинг</span> </button>
+                    </li>
+                </ul>
 
-            </ul>
+                <ul class="list projects flexbox">
+                    <li class="item">
+                        <img src="./images/project-1.jpg" alt="">
+                        <h3 class="title">Технокряк</h3>
+                        <p class="text">Веб-сайт</p>
+                    </li>
+                    <li class="item">
+                        <img src="./images/project-2.jpg" alt="">
+                        <h3 class="title">Постер New Orlean vs Golden Star</h3>
+                        <p class="text">Дизайн</p>
+                    </li>
+                    <li class="item">
+                        <img src="./images/project-3.jpg" alt="">
+                        <h3 class="title">Ресторан Seafood</h3>
+                        <p class="text">Приложение</p>
+                    </li>
+                    <li class="item">
+                        <img src="./images/project-4.jpg" alt="">
+                        <h3 class="title">Проект Prime</h3>
+                        <p class="text">Маркетинг</p>
+                    </li>
+                    <li class="item">
+                        <img src="./images/project-5.jpg" alt="">
+                        <h3 class="title">Проект Boxes</h3>
+                        <p class="text">Приложение</p>
+                    </li>
+                    <li class="item">
+                        <img src="./images/project-6.jpg" alt="">
+                        <h3 class="title">Inspiration has no Borders</h3>
+                        <p class="text">Веб-сайт</p>
+                    </li>
+                    <li class="item">
+                        <img src="./images/project-7.jpg" alt="">
+                        <h3 class="title">Издание Limited Edition</h3>
+                        <p class="text">Дизайн</p>
+                    </li>
+                    <li class="item">
+                        <img src="./images/project-8.jpg" alt="">
+                        <h3 class="title">Проект LAB</h3>
+                        <p class="text">Маркетинг</p>
+                    </li>
+                    <li class="item">
+                        <img src="./images/project-9.jpg" alt="">
+                        <h3 class="title">Growing Business</h3>
+                        <p class="text">Приложение</p>
+                    </li>
+
+                </ul>
+            </div>
         </section>
     </main>
 
