--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
     </header>
 
     <main>
-
+        <!-- <h1>Страница Портфолио</h1> -->
         <section class="page-portfolio">
             <div class="container">
 
@@ -66,6 +66,7 @@
                 </ul>
 
                 <ul class="list projects flexbox">
+                    <!-- <h2>Сетка с пректами</h2> -->
                     <li class="item">
                         <img src="./images/project-1.jpg" alt="">
                         <h3 class="title">Технокряк</h3>
