--- a/portfolio.html
+++ b/portfolio.html
@@ -69,48 +69,66 @@
                     <!-- <h2>Сетка с пректами</h2> -->
                     <li class="item">
                         <img src="./images/project-1.jpg" alt="">
-                        <h3 class="title">Технокряк</h3>
-                        <p class="text">Веб-сайт</p>
+                        <div class="under-the-pic">
+                            <h3 class="title">Технокряк</h3>
+                            <p class="text">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/project-2.jpg" alt="">
-                        <h3 class="title">Постер New Orlean vs Golden Star</h3>
-                        <p class="text">Дизайн</p>
+                        <div class="under-the-pic">
+                            <h3 class="title">Постер New Orlean vs Golden Star</h3>
+                            <p class="text">Дизайн</p>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/project-3.jpg" alt="">
-                        <h3 class="title">Ресторан Seafood</h3>
-                        <p class="text">Приложение</p>
+                        <div class="under-the-pic">
+                            <h3 class="title">Ресторан Seafood</h3>
+                            <p class="text">Приложение</p>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/project-4.jpg" alt="">
-                        <h3 class="title">Проект Prime</h3>
-                        <p class="text">Маркетинг</p>
+                        <div class="under-the-pic">
+                            <h3 class="title">Проект Prime</h3>
+                            <p class="text">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/project-5.jpg" alt="">
-                        <h3 class="title">Проект Boxes</h3>
-                        <p class="text">Приложение</p>
+                        <div class="under-the-pic">
+                            <h3 class="title">Проект Boxes</h3>
+                            <p class="text">Приложение</p>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/project-6.jpg" alt="">
-                        <h3 class="title">Inspiration has no Borders</h3>
-                        <p class="text">Веб-сайт</p>
+                        <div class="under-the-pic">
+                            <h3 class="title">Inspiration has no Borders</h3>
+                            <p class="text">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/project-7.jpg" alt="">
-                        <h3 class="title">Издание Limited Edition</h3>
-                        <p class="text">Дизайн</p>
+                        <div class="under-the-pic">
+                            <h3 class="title">Издание Limited Edition</h3>
+                            <p class="text">Дизайн</p>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/project-8.jpg" alt="">
-                        <h3 class="title">Проект LAB</h3>
-                        <p class="text">Маркетинг</p>
+                        <div class="under-the-pic">
+                            <h3 class="title">Проект LAB</h3>
+                            <p class="text">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="item">
                         <img src="./images/project-9.jpg" alt="">
-                        <h3 class="title">Growing Business</h3>
-                        <p class="text">Приложение</p>
+                        <div class="under-the-pic">
+                            <h3 class="title">Growing Business</h3>
+                            <p class="text">Приложение</p>
+                        </div>
                     </li>
 
                 </ul>
