--- a/index.html
+++ b/index.html
@@ -49,74 +49,70 @@
     <main>
         <!-- Шапка сайта -->
         <section class="hero">
-            <div class="container">
+            <div class="container flexbox">
                 <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
                 <button type="button" class="button"> <span>Заказать услугу</span> </button>
             </div>
         </section>
 
-        <!-- Контейнер объединяющий "Особенности" и "Чем мы занимаемся" -->
-        <div class="common-features-whatwedo">
-            <!-- ОСОБЕННОСТИ -->
-            <section class="featuress">
-                <div class="container features">
-                    <ul class="list features flexbox">
-                        <li class="item">
-                            <!-- ОСОБЕННОСТИ Feature 1 -->
-                            <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                            <p class="text">
-                                Идейные соображения, а также начало повседневной работы по формированию
-                                позиции.
-                            </p>
-                        </li>
+        <!-- ОСОБЕННОСТИ -->
+        <section class="features">
+            <div class="container">
+                <ul class="list flexbox">
+                    <li class="item">
+                        <!-- ОСОБЕННОСТИ Feature 1 -->
+                        <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                        <p class="text">
+                            Идейные соображения, а также начало повседневной работы по формированию
+                            позиции.
+                        </p>
+                    </li>
 
-                        <li class="item">
-                            <!-- ОСОБЕННОСТИ Feature 2 -->
-                            <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
-                            <p class="text">
-                                Задача организации, в особенности же рамки и место обучения кадров влечет за
-                                собой.
-                            </p>
-                        </li>
+                    <li class="item">
+                        <!-- ОСОБЕННОСТИ Feature 2 -->
+                        <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
+                        <p class="text">
+                            Задача организации, в особенности же рамки и место обучения кадров влечет за
+                            собой.
+                        </p>
+                    </li>
 
-                        <li class="item">
-                            <!-- ОСОБЕННОСТИ Feature 3 -->
-                            <h3 class="title">ПЛАНИРОВАНИЕ</h3>
-                            <p class="text">
-                                Равным образом консультация с широким активом в значительной степени
-                                обуславливает.
-                            </p>
-                        </li>
+                    <li class="item">
+                        <!-- ОСОБЕННОСТИ Feature 3 -->
+                        <h3 class="title">ПЛАНИРОВАНИЕ</h3>
+                        <p class="text">
+                            Равным образом консультация с широким активом в значительной степени
+                            обуславливает.
+                        </p>
+                    </li>
 
-                        <li class="item">
-                            <!-- ОСОБЕННОСТИ Feature 4 -->
-                            <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                            <p class="text">
-                                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-                            </p>
-                        </li>
-                    </ul>
-                </div>
-            </section>
+                    <li class="item">
+                        <!-- ОСОБЕННОСТИ Feature 4 -->
+                        <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                        <p class="text">
+                            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
 
-            <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
-            <section class="whatwedo-page">
-                <div class="container whatwedo">
-                    <h2 class="title"> Чем мы занимаемся</h2>
-                    <ul class="list flexbox">
-                        <li class="item"><img src="./images/box-1.jpg" alt="box-1"></li>
-                        <li class="item"><img src="./images/box-2.jpg" alt="box-2"></li>
-                        <li class="item"><img src="./images/box-3.jpg" alt="box-3"></li>
-                    </ul>
-                </div>
-            </section>
-
-        </div>
+        <!-- ЧЕМ МЫ ЗАНИМАЕМСЯ -->
+        <section class="whatwedo">
+            <div class="container">
+                <h2 class="title"> Чем мы занимаемся</h2>
+                <ul class="list flexbox">
+                    <li class="item"><img src="./images/box-1.jpg" alt="box-1"></li>
+                    <li class="item"><img src="./images/box-2.jpg" alt="box-2"></li>
+                    <li class="item"><img src="./images/box-3.jpg" alt="box-3"></li>
+                </ul>
+            </div>
+        </section>
 
         <!-- НАША КОМАНДА -->
 
         <section class="our-team">
-            <div class="container team">
+            <div class="container">
                 <h2 class="title">Наша команда</h2>
                 <ul class="list team flexbox">
                     <li class="item">
